--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {margin:0;font-family:Arial}
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #1e90ff;
 }
 
 .topnav a {
@@ -16,7 +16,7 @@ body {margin:0;font-family:Arial}
 }
 
 .active {
-  background-color: #04AA6D;
+  background-color: #77b5fe;
   color: white;
 }
 
@@ -59,7 +59,7 @@ body {margin:0;font-family:Arial}
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
+  background-color: #77b5fe;
   color: white;
 }
 
