--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {margin:0;font-family:Arial}
 }
 
 .active {
-  background-color: #77b5fe;
+  background-color: #1560bd;
   color: white;
 }
 
